<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:id="@+id/settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activity_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"

        >
        <LinearLayout
            android:layout_margin="@dimen/header_margin"
            android:layout_marginEnd="52dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
>
            <Button
                android:layout_width="@dimen/header_buttons_weight"
                android:id="@+id/back_button"
                android:elevation="0dp"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:textColor="@android:color/transparent"
                tools:ignore="TouchTargetSizeCheck"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty_button"
                app:icon = "@drawable/arrow_back"
                app:iconTint = "@color/header_content_settings"
                >
            </Button>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/settings"
                android:fontFamily="@font/ys_display_medium"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:textSize="@dimen/main_manu_button_size"
                android:textColor="@color/header_content_settings"
                android:textFontWeight="500"
                />

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            >
        <TextView
            android:text="@string/switcher_theme"
            style="@style/SettingsTextStyle" />

            <Switch
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:checked="false"
                android:thumbTint="@color/thumb_tint"
                android:trackTint="@color/track_tint"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/share"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            >
            <TextView
                style="@style/SettingsTextStyle"
                android:text="@string/share" />

            <ImageView
                style="@style/ImageSettingsStyle"
                android:src="@drawable/share"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/support"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            >
            <TextView
                style="@style/SettingsTextStyle"
                android:text="@string/support"/>

            <ImageView
                style="@style/ImageSettingsStyle"
                android:src="@drawable/support" />
        </FrameLayout>
        <FrameLayout
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                style="@style/SettingsTextStyle"
                android:text="@string/agreement"
                />

            <ImageView
                style="@style/ImageSettingsStyle"
                android:src="@drawable/arrow_forward"
                />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>