<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/header_margin"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <Button
                android:layout_width="@dimen/header_buttons_weight"
                android:layout_height="wrap_content"
                android:textColor="@android:color/transparent"
                tools:ignore="TouchTargetSizeCheck"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty_button"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/main_manu_button_size"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    />


                <Button
                    android:layout_width="12dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="130dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/empty_button"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <Button
                android:layout_width="@dimen/header_buttons_weight"
                android:layout_height="wrap_content"
                android:textColor="@android:color/transparent"
                tools:ignore="TouchTargetSizeCheck"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty_button"
                android:layout_gravity="end"
                />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/main_manu_button_radius"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/main_manu_button_radius"
            android:text="@string/search"
            android:textColor="@color/black_custom"
            android:textSize="@dimen/main_manu_button_size"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconTint="@color/black_custom"
            app:iconGravity="textStart"
             />


        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/main_manu_button_radius"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/main_manu_button_radius"
            android:textColor="@color/black_custom"
            android:text="@string/media_library"
            android:textSize="@dimen/main_manu_button_size"
            android:textAllCaps="false"
            app:icon="@drawable/media_library"
            app:iconTint="@color/black_custom"
            app:iconGravity="textStart"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/main_manu_button_radius"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/main_manu_button_radius"
            android:textColor="@color/black_custom"
            android:text="@string/settings"
            android:textSize="@dimen/main_manu_button_size"
            android:textAllCaps="false"
            app:icon="@drawable/settings"
            app:iconTint="@color/black_custom"
            app:iconGravity="textStart"
            />
    </LinearLayout>
</LinearLayout>

